notes.txt
PRIMEIRO MAKE GERA ESSA SAIDA, O SEGUNDO DA CERTO:


./configure
X11 include dir : /usr/X11/include
lib_x86_64 generation
Now make it.
gcc -O3 -I/usr/X11/include   -c -o mlx_init.o mlx_init.c
mlx_init.c:26:7: error: implicit declaration of function 'mlx_int_get_visual' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
  if (mlx_int_get_visual(xvar)==-1)
      ^
mlx_init.c:70:1: warning: non-void function does not return a value [-Wreturn-type]
}
^
mlx_init.c:91:1: warning: non-void function does not return a value [-Wreturn-type]
}
^
2 warnings and 1 error generated.
make[2]: *** [mlx_init.o] Error 1
gcc -I/usr/X11/include -O3 -I..   -c -o main.o main.c
main.c:44:1: warning: non-void function does not return a value [-Wreturn-type]
}
^
main.c:50:1: warning: non-void function does not return a value [-Wreturn-type]
}
^
main.c:57:1: warning: non-void function does not return a value in all control paths [-Wreturn-type]
}
^
main.c:64:1: warning: non-void function does not return a value in all control paths [-Wreturn-type]
}
^
main.c:71:1: warning: non-void function does not return a value [-Wreturn-type]
}
^
main.c:76:1: warning: non-void function does not return a value [-Wreturn-type]
}
^
main.c:81:1: warning: non-void function does not return a value [-Wreturn-type]
}
^
main.c:86:1: warning: non-void function does not return a value [-Wreturn-type]
}
^
main.c:118:3: error: implicit declaration of function 'color_map_1' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
  color_map_1(win1,WIN1_SX,WIN1_SY);
  ^
main.c:138:3: error: implicit declaration of function 'color_map_2' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
  color_map_2(data1,bpp1,sl1,IM1_SX,IM1_SY,endian1, 1);
  ^
main.c:138:3: note: did you mean 'color_map_1'?
main.c:118:3: note: 'color_map_1' declared here
  color_map_1(win1,WIN1_SX,WIN1_SY);
  ^
main.c:237:1: warning: non-void function does not return a value [-Wreturn-type]
}
^
main.c:284:1: warning: non-void function does not return a value [-Wreturn-type]
}
^
10 warnings and 2 errors generated.
make[2]: *** [main.o] Error 1
make[1]: *** [do_configure] Error 2
make: *** [../../minilibx-macos/libmlx_OpenBSD.a] Error 2
so_long ➤                                                             git:main*
